--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cv-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hasan-wajahat.github.io/cv-app",
   "dependencies": {
     "color": "^3.1.1",
     "prop-types": "^15.7.2",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,6 +40,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0"
+    "eslint-plugin-react": "^7.13.0",
+    "gh-pages": "^2.0.1"
   }
 }
