--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-jss": "^8.6.1",
+    "react-jss": "^10.0.0-alpha.20",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
